# ibex-query-engine-lib

./: .gitignore  CONFIGURATION_GUIDE.md  CONFIG_MANAGER_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  FEDERATED_COMPLETE.md  FEDERATED_QUERIES.md  INSTALLATION.md  INTEGRATION_GUIDE.md  LIBRARY_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  QUICKTEST.md  README.md  README_TESTING.md  TESTING_SUMMARY.md  TEST_READY.md  TEST_RESULTS.md  docker-compose.test.yml  pyproject.toml  quick_test.py  run_inline_test.py  run_tests.sh  setup.py  test.sh  test_with_docker.py  validate_library.py
.github/workflows/: build-and-publish.yml  docker-build.yml  test.yml
config/: config.json
examples/: basic_usage.py  config_management.py  federated_queries.py  integration_ajna_backend.py
src/config/: config.json
src/ibexdb/: __init__.py  client.py  config.py  config_manager.py  federated.py  logger.py  models.py  operations.py  query_builder.py
src/ibexdb/integrations/: __init__.py  ajna_backend.py
test-data/: config-sources.json  init-mysql.sql  init-postgres.sql
test_features/: 01_test_models.py  02_test_config.py  03_test_connectivity.py  04_test_operations_init.py  05_test_table_ops.py  06_test_write_query.py  07_test_update_delete.py  run_all.sh
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_query_builder.py
