[project]
name = "ibexdb"
version = "0.1.0"
description = "Python client library for IbexDB - Serverless ACID database on S3 with Apache Iceberg"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ajna Team", email = "team@ajnacloud.com"}
]
keywords = ["database", "iceberg", "s3", "acid", "serverless", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyiceberg[s3fs,pyarrow]>=0.7.1",
    "polars>=0.20.31",
    "duckdb>=1.0.0",
    "boto3>=1.34.69",
    "fsspec>=2024.6.1",
    "s3fs>=2024.6.1",
    "pyarrow>=16.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "python-dotenv>=1.0.1",
    "black>=24.4.2",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]
lambda = [
    # Additional dependencies for AWS Lambda deployment
    "aws-lambda-typing>=2.18.0",
]
fastapi = [
    # Optional FastAPI integration
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
all = [
    "ibexdb[dev,lambda,fastapi]",
]

[project.urls]
Homepage = "https://github.com/ajnacloud/ibexdb"
Documentation = "https://docs.ibexdb.io"
Repository = "https://github.com/ajnacloud/ibexdb"
Issues = "https://github.com/ajnacloud/ibexdb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibexdb"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

